# ppbl2023-plutus-template

./: .gitignore  cabal.project  lock-always-succeeds.raw  lock-always-succeeds.signed  ppbl2023-plutus-template.cabal  readme.md
bash-scripts/: balance.sh  createPreprodWallet.sh  example.sh  getAddressUTxO.sh  getTxFunc.sh  make-preprod-wallet.sh  metadata.json  mint-native-assets-with-plutus.draft  mint-native-assets-with-plutus.signed  mint-ppblnft.sh  mint-tokens-native-script-unique-minting-key.sh  mint-tokens-native-script.sh  mint-tokens-plutus-script.sh  minting.policy  queryTip.sh  send-lovelace.draft  send-lovelace.signed  send-native-asset.sh  send-tx-with-any-metadata.sh  send-tx-with-simple-metadata.sh  sendLovelacePreprod.sh  start-preprod-node.sh  tmp.txt  tx-with-metadata.draft  tx-with-metadata.signed  variables-example.sh  variables-private.sh
bash-scripts/faucet-mini-project/: build-tx.sh  deploy-reference-script.sh  faucet-redeemer.json  faucet-registry-metadata.json  lock-tokens-at-faucet-address.sh  project-variables.sh  query-faucet-address.sh  test-unlock-tokens-at-faucet-address.sh
bash-scripts/faucet-mini-project/example-data/: example-faucet-datum.json  example-faucet-redeemer.json  example-faucet-registry-metadata.json
bash-scripts/tmp/: utxos.txt
compiled-plutus/: always-succeeds-aiken.plutus  always-succeeds-plu-ts.plutus  unlock-always-succeeds.raw  unlock-always-succeeds.signed
learned/: address_gen  assest_txn  making_txn  variables
src/AlwaysSucceeds/: Compiler.hs  TypedValidator.hs  Validator.hs
src/FaucetMiniProject/: Compiler.hs  Types.hs  Validator.hs
src/PPBLNFT/: Compiler.hs  Minter.hs
src/Tender/: tenderContract.hs
src/Tokens/: Compiler.hs  Minter.hs
transaction/: NewDatum.json  UpdateNumber.json  contrib-updates-lucky-number.draft  contrib-updates-lucky-number.signed  tempvariables
wallet/: payment.addr  payment.skey  payment.vkey  stake.skey  stake.vkey
